--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.23.0",
     "bluebird": "^3.5.1",
+    "csv-parse": "^2.2.0",
     "csv-stringify": "^2.0.2",
     "csv2geojson": "^5.0.2",
     "csvtojson": "^1.1.9",
