--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-register": "^6.23.0",
     "bluebird": "^3.5.1",
+    "csv-parse": "^2.2.0",
     "csv-stringify": "^2.0.2",
     "csv2geojson": "^5.0.2",
     "csvtojson": "^1.1.9",
@@ -38,6 +39,7 @@
     "glob": "^7.1.2",
     "lodash.camelcase": "^4.3.0",
     "node-cleanup": "^2.1.2",
+    "node-fetch": "^2.1.2",
     "osm2obj": "^3.0.0",
     "osrm": "5.16.4",
     "rbush": "^2.0.2",
